force-app/main/default/objects/Zoom_Users_Info__c/fields/AHT__c.field-meta.xml
<CustomField>
    <fullName>AHT__c</fullName>
    <description>Average handle time of inbound and outbound calls in minutes.</description>
    <formula>IF(Inbound_Calls_Duration__c + Outbound_Calls_Duration__c &gt; 0,
((Inbound_Calls_Duration__c + Outbound_Calls_Duration__c)/60) / (  Inbound_Calls__c  +  Outbound_Calls__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average handle time of inbound and outbound calls in minutes.</inlineHelpText>
    <label>AHT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>