force-app/main/default/objects/Zoom_Users_Info__c/fields/AHT_Inbound__c.field-meta.xml
<CustomField>
    <fullName>AHT_Inbound__c</fullName>
    <description>Average duration of inbound calls for Contact Center</description>
    <formula>TEXT(  MFLOOR( IF (Inbound_Calls__c = 0, 0, Inbound_Calls_Duration__c  / Inbound_Calls__c) / 60))+&quot; min(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average duration of inbound calls for Contact Center</inlineHelpText>
    <label>AHT Inbound CC</label>
    <type>Text</type>
</CustomField>