force-app/main/default/objects/Zoom_Users_Info__c/fields/AHT_Outbound__c.field-meta.xml
<CustomField>
    <fullName>AHT_Outbound__c</fullName>
    <description>Average duration of outbound calls for Contact Center</description>
    <formula>TEXT( MFLOOR( IF (Outbound_Calls__c = 0, 0, Outbound_Calls_Duration__c / Outbound_Calls__c) / 60))+&quot; min(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average duration of outbound calls for Contact Center</inlineHelpText>
    <label>AHT Outbound CC</label>
    <type>Text</type>
</CustomField>