force-app/main/default/objects/Zoom_Users_Info__c/fields/CC_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>CC_Status_Updated__c</fullName>
    <label>Status Updated CC</label>
    <type>DateTime</type>
</CustomField>