force-app/main/default/objects/Zoom_Users_Info__c/fields/CC_Sub_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>CC_Sub_Status_Updated__c</fullName>
    <label>Sub Status Updated CC</label>
    <type>DateTime</type>
</CustomField>