force-app/main/default/objects/Zoom_Users_Info__c/fields/Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Calls__c</fullName>
    <description>Total Number inbound Calls for Contact Center Users</description>
    <inlineHelpText>Total Number inbound Calls for Contact Center Users</inlineHelpText>
    <label>Inbound Calls CC</label>
    <summaryFilterItems>
        <field>Zoom_Phone_Calls_Info__c.Call_Direction__c</field>
        <operation>equals</operation>
        <value>inbound</value>
    </summaryFilterItems>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>