force-app/main/default/objects/Zoom_Users_Info__c/fields/Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Calls__c</fullName>
    <description>Total Number of outbound Calls from Contact Center</description>
    <inlineHelpText>Total Number of outbound Calls from Contact Center</inlineHelpText>
    <label>Outbound Calls CC</label>
    <summaryFilterItems>
        <field>Zoom_Phone_Calls_Info__c.Call_Direction__c</field>
        <operation>equals</operation>
        <value>outbound</value>
    </summaryFilterItems>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>