force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Calls__c</fullName>
    <label>Inbound Calls</label>
    <summaryFilterItems>
        <field>Zoom_Phone_Calls_Info__c.Inbound_Call__c</field>
        <operation>equals</operation>
        <value>inbound</value>
    </summaryFilterItems>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>