force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Outbound_Calls_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Outbound_Calls_Duration__c</fullName>
    <description>Total Outbound Calls Duration per day.</description>
    <inlineHelpText>Total Outbound Calls Duration per day.</inlineHelpText>
    <label>Total Outbound Calls Duration</label>
    <summarizedField>Zoom_Phone_Calls_Info__c.Outbound_Call_Duration__c</summarizedField>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>