force-app/main/default/objects/Zoom_Users_Info__c/fields/User_Log_In__c.field-meta.xml
<CustomField>
    <fullName>User_Log_In__c</fullName>
    <description>First user logged inside Contact Center</description>
    <label>LogIn CC</label>
    <type>DateTime</type>
</CustomField>