force-app/main/default/objects/Zoom_Users_Info__c/listViews/ALL_Users_For_Today.listView-meta.xml
<ListView>
    <fullName>ALL_Users_For_Today</fullName>
    <columns>Tracking_Date__c</columns>
    <columns>NAME</columns>
    <columns>Presence_Status__c</columns>
    <columns>Total_Inbound_Calls__c</columns>
    <columns>Total_Outbound_Calls__c</columns>
    <columns>LogOut__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tracking_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>ALL Users For Today</label>
</ListView>