force-app/main/default/objects/Zoom_Users_Info__c/listViews/Business_Growth_Team.listView-meta.xml
<ListView>
    <fullName>Business_Growth_Team</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Jay</value>
    </filters>
    <label>Business Growth Team</label>
    <sharedTo>
        <roleAndSubordinates>SVP_Revenue</roleAndSubordinates>
    </sharedTo>
</ListView>